other utils added

--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -1,22 +1,20 @@
+@use "variables" as *;
+
 $colors: (
-  'gray100': $gray100,
-  'gray200': $gray200,
-  'gray300': $gray300,
-  'gray400': $gray400,
-  'gray500': $gray500,
-  'gray600': $gray600,
-  'gray700': $gray700,
-  'gray800': $gray800,
-  'gray900': $gray900,
-  'primary': $primary,
-  'success': $success,
-  'info': $info,
-  'warning': $warning,
-  'danger': $danger,
-  'light': $light,
-  'dark': $dark,
-  'white': $white,
-  'black': $black
+"primary": $primary,
+"success": $success,
+"info": $info,
+"warning": $warning,
+"danger": $danger,
+"light": $light,
+"dark": $dark,
+"gray": $gray,
+"bg-secondary-1": $bg-secondary-1,
+"bg-secondary-2": $bg-secondary-2,
+"text-primary-1": $text-primary-1,
+"text-primary-2": $text-primary-2,
+"white": $white,
+"black": $black,
 );
 
 // Classes for colors
