file system for dashboard, markup

--- a/src/scss/atomic-design-system/utils/_mixins.scss
+++ b/src/scss/atomic-design-system/utils/_mixins.scss
@@ -1,3 +1,6 @@
+@use "sass:map";
+@use "variables" as v;
+
 // For _flex.scss
 @mixin flex-center($is-column: false) {
     display: flex;
@@ -40,4 +43,39 @@
     @else {
         @error "Incompatible units. Check mixin params";
     }
+}
+
+$breakpoints: (
+    "sm": v.$sm,
+    "md": v.$md,
+    "lg": v.$lg,
+    "xl": v.$xl,
+    "xxl": v.$xxl,
+    ) !default;
+
+// media query
+@mixin mq($bp: sm, $type: min, $is-retina: false) {
+    @if map.has-key($breakpoints, $bp) {
+        $width: map-get($breakpoints, $bp
+        );
+
+    @if $type == max {
+        $width: $width - 0.02px;
+    }
+
+    @media only screen and (#{$type}-width: $width) {
+        @if $is-retina {
+
+            @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                @content;
+            }
+        }
+
+        @else {
+            @content;
+        }
+    }
+}
 }
