--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,5 +2,9 @@
 @forward "co-workers";
 @forward "tasks";
 @forward "reports";
+@forward "menu";
 
 @forward "btn/btn";
+@forward "logo";
+@forward "notification";
+@forward "menu-btn";
