--- a/src/scss/components/_menu-btn.scss
+++ b/src/scss/components/_menu-btn.scss
@@ -7,6 +7,7 @@
     display: inline-flex;
     align-items: center;
     margin-right: auto;
+    gap: 10px;
 
     color: fn.get-color("light-primary");
 
