co-workers table

--- a/src/scss/utilites/_placeholders.scss
+++ b/src/scss/utilites/_placeholders.scss
@@ -35,7 +35,7 @@
     letter-spacing: 0.04em;
 };
 
-%deteils-accent {
+%details-accent {
     font-size: 14px;
     font-weight: 500;
     line-height: 1.42;
