--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -44,6 +44,7 @@ menu {
 img {
   max-inline-size: 100%;
   max-block-size: 100%;
+  display: block;
 }
 
 /* removes spacing between cells in tables */
