--- a/src/scss/utilites/_mixins.scss
+++ b/src/scss/utilites/_mixins.scss
@@ -40,7 +40,9 @@
     img {
         object-fit: cover;
         object-position: top center;
-    }
+        width: $width !important;
+        height: $height !important;
+    };
 };
 
 // scroll-bar
@@ -51,7 +53,7 @@
 
     &::-webkit-scrollbar-track {
         background-color: transparent;
-        border-radius: 4px;
+        border-radius: 100px;
 
         &:hover {
             background-color: rgba(#fff, 0.3);
@@ -62,7 +64,7 @@
         background-color: fn.get-color('light-secondary');
         background-clip: content-box;
         border: 5px solid transparent;
-        border-radius: 4px;
+        border-radius: 100px;
 
         &:hover {
             background-color: fn.get-color('accent-primary');
