--- a/src/scss/components/coworkers/_details.scss
+++ b/src/scss/components/coworkers/_details.scss
@@ -19,6 +19,10 @@
     display: flex;
     align-items: center;
     gap: 12px;
+
+    .co-workers-details[open] & {
+        margin-bottom: 8px;
+    };
 };
 
 .co-workers-icon {
