--- a/src/scss/utilites/_variables.scss
+++ b/src/scss/utilites/_variables.scss
@@ -45,7 +45,7 @@ $main-font: "Montserrat";
 $font-weights: (
     "Regular": 400,
     "Medium": 500,
-    "SemiBild": 600,
+    "SemiBold": 600,
     "Bold": 700,
 );
 
