--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -1,27 +1,107 @@
+@use "../utilites/placeholders";
+@use "../utilites/variables" as var;
+@use "../utilites/functions" as fn;
+@use "../utilites/mixins" as mix;
+
 .tasks {
+    @extend %section-frame;
+
     grid-area: tasks;
-}
 
-.tasks-title {}
+    min-width: 340px;
+    max-height: 420px;
+    padding: 16px;
+    background-color: fn.get-color('dark-tertiary');
+};
 
-.tasks-list {}
+.tasks-title {
+    @extend %details;
 
-.tasks-item {}
+    margin-bottom: 36px;
+    color: fn.get-color('light-secondary');
 
-.tasks-checkbox {}
+    span {
+        @extend %accent-text;
+        color: fn.get-color('light-primary');
+    };
+};
 
-.tasks-input {}
+.tasks-list {
+    @include mix.scroll-bar;
 
-.visually-hidden {}
+    max-height: 284px;
+    overflow: auto;
+    margin-right: -14px;
+    padding-right: 14px;
+};
 
-.tasks-checkbox-icon {}
+.tasks-item {
+    display: flex;
+    align-items: center;
+    gap: 16px;
 
-.tasks-info {}
+    padding: 16px 8px;
+    border-top: 1px solid fn.get-color('light-tertiary');
+};
 
-.tasks-heading {}
+.tasks-checkbox {
+    flex-shrink: 0;
 
-.tasks-desc {}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+};
 
-.tasks-btn {}
+.tasks-checkbox-icon {
+    @include mix.ease('fast', fill, background-color, border-color);
 
-.tasks-btn-icon {}
+    fill: fn.get-color('transparent');
+    border: 1px solid;
+    border-color: fn.get-color('light-tertiary');
+    border-radius: 4px;
+
+    .tasks-input:checked + & {
+        fill: fn.get-color('light-primary');
+        background-color: fn.get-color('accent-primary');
+        border-color: fn.get-color('transparent');
+    };
+
+    .tasks-input:focus-visible + & {
+        outline: 2px solid fn.get-color('light-tertiary');
+        outline-offset: 2px;
+    };
+};
+
+.tasks-info {
+    flex-grow: 1;
+};
+
+.tasks-heading {
+    @extend %details;
+    color: fn.get-color('light-primary');
+};
+
+.tasks-desc {
+    @extend %details;
+    color: fn.get-color('light-secondary');
+};
+
+.tasks-btn {
+    @include mix.ease('fast', outline);
+
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+
+    &:focus-visible {
+        outline: 2px solid rgba(fn.get-color('light-tertiary'), 0.6);
+        outline-offset: 3px;
+    };
+};
+
+.tasks-btn-icon {
+    fill: fn.get-color('current');
+};
